# TrefusisEngine

./: .gitignore  CMakeLists.txt  README.md  trefusis.conf
.cache/clangd/index/: Actor.cpp.F0F3D9AF9C929537.idx  Actor.h.29BFA0A372248B8D.idx  Character.cpp.A1C54FEDCC22A871.idx  Character.h.97A11BC5A6210DF9.idx  DialogManager.cpp.F783C52B93B2ECAD.idx  DialogManager.hpp.5AC761557062D3B0.idx  GameManager.cpp.BDD488F2532A9C32.idx  GameManager.h.940ECBC0BBE22CC1.idx  GraphicsManager.cpp.BD6AB3B1485FAA77.idx  GraphicsManager.h.BBA85D229B6B554A.idx  Level.cpp.5F44FA1F4CCCCB2A.idx  Level.h.4D53DBE601C7B56D.idx  MusicManager.cpp.FE679291596FBDF1.idx  MusicManager.h.835F440538CC80CB.idx  Player.h.78B7509575A07021.idx  RandomNumberGenerator.cpp.FE18DB87D0006874.idx  RandomNumberGenerator.h.90350E79A9F45063.idx  SaveManager.cpp.617C17E820A2E552.idx  SaveManager.h.42141BD60F3E2540.idx  ScriptManager.cpp.A4DB47E39C96E50C.idx  ScriptManager.h.C73E6E998559C2A6.idx  TimeManager.cpp.C913286D2B69CCD2.idx  TimeManager.h.3282891B472EFAF1.idx  TrefusisConfig.cpp.B9D8C61129412E42.idx  TrefusisConfig.h.14FCBB130FE38403.idx  harlequin_api.cpp.0212DC107A3885F0.idx  harlequin_api.h.7BBCA712FA57D3C5.idx  main.cpp.C3A10CB2C84A7C00.idx
.github/workflows/: ccpp.yml
developmentResources/maps/: sampleMap.tmx
developmentResources/tilesets/: TrefusisStandardZoneTileset.tsx
resources/: levels.conf
resources/maps/: sampleMap.0  sampleMap.1  sampleMap.csv
resources/scripts/: main.py
src/: CMakeLists.txt  main.cpp
src/harlequin/: CMakeLists.txt  DialogManager.cpp  DialogManager.hpp  MusicManager.cpp  MusicManager.h  ScriptManager.cpp  ScriptManager.h  harlequin_api.cpp  harlequin_api.h
src/managers/: CMakeLists.txt  GameManager.cpp  GameManager.h  GraphicsManager.cpp  GraphicsManager.h  Level.cpp  Level.h  LightingManager.cpp  LightingManager.hpp  MapManager.cpp  MapManager.h  SaveManager.cpp  SaveManager.h  TimeManager.cpp  TimeManager.h
src/managers/MapManagerInternals/: CMakeLists.txt  FoilageGenerator.cpp  FoilageGenerator.h  FoilageManager.cc  FoilageManager.hpp  Level.cpp  Level.h  Zone.cpp  Zone.h
src/objects/: Actor.cpp  Actor.h  CMakeLists.txt  Character.cpp  Character.h  EnviromentalActor.cpp  EnviromentalActor.h  Player.cpp  Player.h
src/trefusisInternals/: CMakeLists.txt  RandomNumberGenerator.cpp  RandomNumberGenerator.h  TrefusisConfig.cpp  TrefusisConfig.h
src/utility/: CMakeLists.txt  FileReader.cpp  FileReader.h
