cmake_minimum_required(VERSION 3.15)
project(TrefusisEngine C CXX)


set(CMAKE_CXX_STANDARD 20)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${TrefusisEngine_SOURCE_DIR}/CMakeModules")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG")
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
set(Python_ADDITIONAL_VERSIONS 3.8)
find_package(PythonLibs 3 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
add_subdirectory(src)
add_executable(TrefusisEngine src/main.cpp)
target_link_libraries(managers ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${PYTHON_LIBRARIES})
target_link_libraries(harlequin internals ${PYTHON_LIBRARIES})
target_link_libraries(managers harlequin internals objects)
target_link_libraries(TrefusisEngine ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${PYTHON_LIBRARIES})
target_link_libraries(TrefusisEngine managers objects internals)