cmake_minimum_required(VERSION 3.15)
set(CMAKE_C_COMPILER "gcc-4.2")
project(TrefusisEngine C CXX)

set(CMAKE_CXX_COMPILER "/Users/elsa/homebrew/opt/llvm/bin/clang++")
set(CMAKE_C_COMPILER "/Users/elsa/homebrew/opt/llvm/bin/clang")

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG -fsanitize=leak ")
include(FindPython)
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
set(Python_ADDITIONAL_VERSIONS 3.8)
find_package(Python REQUIRED COMPONENTS Interpreter Development)
add_subdirectory(src)
add_executable(TrefusisEngine src/main.cpp)
target_link_libraries(managers SDL2::SDL2-static SDL2::SDL2main SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf Python::Python)
target_link_libraries(harlequin internals Python::Python)
target_link_libraries(objects SDL2::SDL2-static SDL2::SDL2main SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf)
target_link_libraries(managers harlequin internals objects)
target_link_libraries(TrefusisEngine SDL2::SDL2-static SDL2::SDL2main SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf Python::Python)
target_link_libraries(TrefusisEngine managers objects internals)